--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-lazyload": "^2.6.0",
     "axios": "^0.19.1",
     "classnames": "^2.2.6",
     "env-cmd": "^10.0.1",
@@ -15,6 +16,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.7",
+    "react-lazy-load-image-component": "^1.4.0",
+    "react-lazyload": "^2.6.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
