--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/react-lazyload": "^2.6.0",
+    "@types/react-redux": "^7.1.6",
+    "@types/redux": "^3.6.0",
     "axios": "^0.19.1",
     "classnames": "^2.2.6",
     "env-cmd": "^10.0.1",
@@ -18,8 +20,10 @@
     "react-i18next": "^11.2.7",
     "react-lazy-load-image-component": "^1.4.0",
     "react-lazyload": "^2.6.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
