--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lazyload": "^2.6.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "sweetalert2": "^9.6.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
