--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,5 +35,5 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: 'dist' 
+    pathtoPublish: 'build' 
     artifactName: 'reactDrop'
