--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-i18next": "^11.2.7",
     "react-lazy-load-image-component": "^1.4.0",
     "react-lazyload": "^2.6.2",
