added tracking of routes

--- a/public/web.config
+++ b/public/web.config
@@ -20,6 +20,8 @@
         <mimeMap fileExtension=".woff2" mimeType="application/font-woff"/>
         <remove fileExtension=".licence"/>
         <mimeMap fileExtension=".licence" mimeType="text/plain"/>
+        <remove fileExtension=".license"/>
+        <mimeMap fileExtension=".license" mimeType="text/plain"/>
       </staticContent>
 	</system.webServer>
 </configuration>
