--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -1,4 +1,5 @@
 {
     "googleAnalyticsEnabled": false,
-    "consoleLogDebug": true
+    "consoleLogDebug": true,
+    "useServiceWorker": false
 }
