--- a/public/assets/config.staging.json
+++ b/public/assets/config.staging.json
@@ -1,4 +1,5 @@
 {
     "googleAnalyticsEnabled": true,
-    "consoleLogDebug": false
+    "consoleLogDebug": false,
+    "useServiceWorker": false
 }
