add to cart button works

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.6",
   "private": true,
   "dependencies": {
+    "@material/react-fab": "^0.15.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
