--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
   "dependencies": {
     "@material/react-fab": "^0.15.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-list": "^0.8.5",
-    "@types/react-redux": "^7.1.6",
+    "@types/react-redux": "^7.1.7",
     "@types/redux": "^3.6.0",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "env-cmd": "^10.0.1",
-    "i18next": "^19.0.3",
+    "env-cmd": "^10.1.0",
+    "i18next": "^19.3.3",
     "immutability-helper": "^3.0.1",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
-    "react-i18next": "^11.2.7",
-    "react-lazy-load-image-component": "^1.4.0",
-    "react-lazyload": "^2.6.2",
+    "react-i18next": "^11.3.4",
+    "react-lazy-load-image-component": "^1.4.1",
+    "react-lazyload": "^2.6.5",
     "react-list": "^0.8.13",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
-    "sweetalert2": "^9.6.1",
-    "typescript": "~3.7.2"
+    "sweetalert2": "^9.10.6",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "env-cmd --file ./.env.development react-scripts start",
@@ -55,13 +55,13 @@
     ]
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.9",
+    "@types/classnames": "^2.2.10",
     "@types/immutability-helper": "^2.6.3",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.31",
+    "@types/react": "^16.9.25",
+    "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
-    "@types/webpack-env": "^1.15.0"
+    "@types/webpack-env": "^1.15.1"
   }
 }
