added displaying of guides

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nms-web-app",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
@@ -24,6 +24,7 @@
     "react-lazy-load-image-component": "^1.4.1",
     "react-lazyload": "^2.6.5",
     "react-list": "^0.8.13",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
