--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "env-cmd": "^10.1.0",
     "i18next": "^19.3.3",
     "immutability-helper": "^3.0.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
