--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
+    "segmented-control": "^0.1.12",
     "sweetalert2": "^9.10.6",
     "typescript": "^3.7.5"
   },
