basic community mission page

--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -1,5 +1,6 @@
 {
     "googleAnalyticsEnabled": false,
     "consoleLogDebug": true,
-    "useServiceWorker": false
+    "useServiceWorker": false,
+    "apiUrl": "http://localhost:55555"
 }
