--- a/public/assets/config.production.json
+++ b/public/assets/config.production.json
@@ -1,5 +1,6 @@
 {
     "googleAnalyticsEnabled": true,
     "consoleLogDebug": false,
-    "useServiceWorker": true
+    "useServiceWorker": true,
+    "apiUrl": "https://api.nmsassistant.com"
 }
