--- a/public/assets/config.staging.json
+++ b/public/assets/config.staging.json
@@ -1,5 +1,6 @@
 {
     "googleAnalyticsEnabled": true,
     "consoleLogDebug": false,
-    "useServiceWorker": false
+    "useServiceWorker": false,
+    "apiUrl": "https://staging-api.nmsassistant.com"
 }
