--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-list": "^0.8.5",
     "@types/react-redux": "^7.1.7",
@@ -21,6 +22,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-helmet": "^6.0.0",
     "react-i18next": "^11.3.4",
     "react-lazy-load-image-component": "^1.4.1",
     "react-lazyload": "^2.6.5",
