basic sync page

--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -2,5 +2,6 @@
     "googleAnalyticsEnabled": false,
     "consoleLogDebug": true,
     "useServiceWorker": false,
-    "apiUrl": "http://localhost:55555"
+    "apiUrl": "http://localhost:55555",
+    "googleClientId": "539483681905-d4ak563l825o8i0b47inn1c7gu30abvs.apps.googleusercontent.com"
 }
