--- a/public/assets/config.production.json
+++ b/public/assets/config.production.json
@@ -2,5 +2,6 @@
     "googleAnalyticsEnabled": true,
     "consoleLogDebug": false,
     "useServiceWorker": true,
-    "apiUrl": "https://api.nmsassistant.com"
+    "apiUrl": "https://api.nmsassistant.com",
+    "googleClientId": "539483681905-cg6d6d3m29kdepmv73efcehr2dia7cfq.apps.googleusercontent.com"
 }
