--- a/public/assets/config.staging.json
+++ b/public/assets/config.staging.json
@@ -2,5 +2,6 @@
     "googleAnalyticsEnabled": true,
     "consoleLogDebug": false,
     "useServiceWorker": false,
-    "apiUrl": "https://staging-api.nmsassistant.com"
+    "apiUrl": "https://staging-api.nmsassistant.com",
+    "googleClientId": "539483681905-d4ak563l825o8i0b47inn1c7gu30abvs.apps.googleusercontent.com"
 }
