--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "env-cmd": "^10.1.0",
+    "firebase": "^7.15.0",
     "i18next": "^19.3.3",
     "immutability-helper": "^3.0.1",
     "moment": "^2.24.0",
@@ -22,6 +23,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-google-login": "^5.1.20",
     "react-helmet": "^6.0.0",
     "react-i18next": "^11.3.4",
     "react-lazy-load-image-component": "^1.4.1",
