--- a/package.json
+++ b/package.json
@@ -4,14 +4,6 @@
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/react-helmet": "^6.0.0",
-    "@types/react-lazyload": "^2.6.0",
-    "@types/react-list": "^0.8.5",
-    "@types/react-redux": "^7.1.7",
-    "@types/redux": "^3.6.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "env-cmd": "^10.1.0",
@@ -33,8 +25,7 @@
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "segmented-control": "^0.1.12",
-    "sweetalert2": "^9.10.6",
-    "typescript": "^3.7.5"
+    "sweetalert2": "^9.10.6"
   },
   "scripts": {
     "start": "env-cmd --file ./.env.development react-scripts start",
@@ -59,6 +50,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.10",
     "@types/immutability-helper": "^2.6.3",
     "@types/jest": "^24.9.1",
@@ -66,6 +60,12 @@
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
-    "@types/webpack-env": "^1.15.1"
+    "@types/webpack-env": "^1.15.1",
+    "@types/react-helmet": "^6.0.0",
+    "@types/react-lazyload": "^2.6.0",
+    "@types/react-list": "^0.8.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux": "^3.6.0",
+    "typescript": "^3.7.5"
   }
 }
