--- a/public/assets/config.production.json
+++ b/public/assets/config.production.json
@@ -3,5 +3,6 @@
     "consoleLogDebug": false,
     "useServiceWorker": true,
     "apiUrl": "https://api.nmsassistant.com",
+    "assistantAppsUrl": "https://api.assistantapps.com",
     "googleClientId": "539483681905-cg6d6d3m29kdepmv73efcehr2dia7cfq.apps.googleusercontent.com"
 }
