--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.6",
     "env-cmd": "^10.1.0",
     "firebase": "^7.15.0",
+    "framer-motion": "^2.6.10",
     "i18next": "^19.3.3",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
@@ -21,6 +22,7 @@
     "react-lazyload": "^2.6.5",
     "react-list": "^0.8.13",
     "react-markdown": "^4.3.1",
+    "react-modal-sheet": "^0.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
