add nmsfm streaming to page

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-audio-player": "^0.14.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-google-login": "^5.1.20",
