--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "nms-web-app",
-  "version": "0.3.7",
+  "version": "0.2.44",
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "dayjs": "^1.10.4",
     "env-cmd": "^10.1.0",
     "firebase": "^7.15.0",
     "framer-motion": "^2.6.10",
