--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -3,6 +3,8 @@
     "consoleLogDebug": true,
     "useServiceWorker": false,
     "apiUrl": "http://localhost:55555",
-    "assistantAppsUrl": "http://localhost:55555",
+    "assistantAppsUrl": "https://api.assistantapps.com",
+    "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
+    "currentWhatIsNewGuid": "e5de2a1c-5751-4bd2-9862-6d07160819a0",
     "googleClientId": "539483681905-d4ak563l825o8i0b47inn1c7gu30abvs.apps.googleusercontent.com"
 }
