--- a/public/assets/config.production.json
+++ b/public/assets/config.production.json
@@ -4,5 +4,7 @@
     "useServiceWorker": true,
     "apiUrl": "https://api.nmsassistant.com",
     "assistantAppsUrl": "https://api.assistantapps.com",
+    "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
+    "currentWhatIsNewGuid": "e5de2a1c-5751-4bd2-9862-6d07160819a0",
     "googleClientId": "539483681905-cg6d6d3m29kdepmv73efcehr2dia7cfq.apps.googleusercontent.com"
 }
