--- a/public/assets/config.staging.json
+++ b/public/assets/config.staging.json
@@ -4,5 +4,7 @@
     "useServiceWorker": false,
     "apiUrl": "https://staging-api.nmsassistant.com",
     "assistantAppsUrl": "https://api.assistantapps.com",
+    "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
+    "currentWhatIsNewGuid": "e5de2a1c-5751-4bd2-9862-6d07160819a0",
     "googleClientId": "539483681905-d4ak563l825o8i0b47inn1c7gu30abvs.apps.googleusercontent.com"
 }
