update generated items and npm packages

--- a/package.json
+++ b/package.json
@@ -4,34 +4,33 @@
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "dayjs": "^1.10.4",
+    "axios": "^0.24.0",
+    "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "env-cmd": "^10.1.0",
-    "firebase": "^7.15.0",
-    "framer-motion": "^2.6.10",
-    "i18next": "^19.3.3",
-    "moment": "^2.24.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-ga": "^2.7.0",
-    "react-google-login": "^5.1.20",
-    "react-helmet": "^6.0.0",
-    "react-i18next": "^11.3.4",
-    "react-lazy-load-image-component": "^1.4.1",
-    "react-lazyload": "^2.6.5",
+    "firebase": "^9.2.0",
+    "framer-motion": "^4.1.17",
+    "i18next": "^21.3.3",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
+    "react-google-login": "^5.2.2",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.13.0",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-lazyload": "^3.2.0",
     "react-list": "^0.8.13",
-    "react-markdown": "^4.3.1",
-    "react-modal-sheet": "^0.1.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-markdown": "^7.1.0",
+    "react-modal-sheet": "^1.4.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
     "react-tippy": "^1.4.0",
-    "react-toastify": "^5.5.0",
-    "redux": "^4.0.5",
-    "segmented-control": "^0.1.12",
-    "sweetalert2": "^9.10.6"
+    "react-toastify": "^8.0.3",
+    "redux": "^4.1.2",
+    "segmented-control": "^0.1.17",
+    "sweetalert2": "^11.1.9"
   },
   "scripts": {
     "start": "env-cmd --file ./.env.development react-scripts start",
@@ -56,12 +55,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.10",
     "@types/immutability-helper": "^2.6.3",
-    "@types/jest": "^24.9.1",
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
