new what is new version

--- a/public/assets/config.production.json
+++ b/public/assets/config.production.json
@@ -5,6 +5,6 @@
     "apiUrl": "https://api.nmsassistant.com",
     "assistantAppsUrl": "https://api.assistantapps.com",
     "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
-    "currentWhatIsNewGuid": "91fee81e-8394-4066-ab38-e7495874e33a",
+    "currentWhatIsNewGuid": "a478810a-7f35-454e-9b24-c63ed6c0651da",
     "googleClientId": "539483681905-cg6d6d3m29kdepmv73efcehr2dia7cfq.apps.googleusercontent.com"
 }
