--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -5,6 +5,6 @@
     "apiUrl": "http://localhost:55555",
     "assistantAppsUrl": "http://localhost:55555",
     "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
-    "currentWhatIsNewGuid": "e34cc4bf-48a7-4d22-9b77-c12f812205af",
+    "currentWhatIsNewGuid": "a478810a-7f35-454e-9b24-c63ed6c0651da",
     "googleClientId": "539483681905-d4ak563l825o8i0b47inn1c7gu30abvs.apps.googleusercontent.com"
 }
