better web.config matches

--- a/public/web.config
+++ b/public/web.config
@@ -1,28 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-	<system.webServer>
-		<rewrite>
-			<rules>
-				<rule name="React Routes" stopProcessing="true">
-					<match url=".*" />
-					<conditions logicalGrouping="MatchAll">
-						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-					</conditions>
-					<action type="Rewrite" url="/" />
-				</rule>
-			</rules>
-		</rewrite>
-      <staticContent>
-        <remove fileExtension=".woff"/>
-        <mimeMap fileExtension=".woff" mimeType="application/font-woff"/>
-        <remove fileExtension=".woff2"/>
-        <mimeMap fileExtension=".woff2" mimeType="application/font-woff"/>
-        <remove fileExtension=".licence"/>
-        <mimeMap fileExtension=".licence" mimeType="text/plain"/>
-        <remove fileExtension=".license"/>
-        <mimeMap fileExtension=".license" mimeType="text/plain"/>
-      </staticContent>
-	</system.webServer>
+    <system.webServer>
+        <httpProtocol>
+            <customHeaders>
+                <add name="Content-Security-Policy" value="default-src 'none'; script-src 'self' 'report-sample'; style-src 'self' 'report-sample' https://fonts.googleapis.com/css2; img-src 'self' data: cdn.assistantapps.com; font-src 'self' fonts.gstatic.com; manifest-src https://assistantapps.com/manifest.json; connect-src api.assistantapps.com; base-uri 'self'; report-uri 'none'; form-action 'none'; frame-ancestors 'none'; upgrade-insecure-requests;" />
+                <add name="X-Content-Security-Policy" value="default-src 'none'; script-src 'self' 'report-sample'; style-src 'self' 'report-sample' https://fonts.googleapis.com/css2; img-src 'self' data: cdn.assistantapps.com; font-src 'self' fonts.gstatic.com; manifest-src https://assistantapps.com/manifest.json; connect-src api.assistantapps.com; base-uri 'self'; report-uri 'none'; form-action 'none'; frame-ancestors 'none'; upgrade-insecure-requests;" />
+                <add name="X-WebKit-CSP" value="default-src 'none'; script-src 'self' 'report-sample'; style-src 'self' 'report-sample' https://fonts.googleapis.com/css2; img-src 'self' data: cdn.assistantapps.com; font-src 'self' fonts.gstatic.com; manifest-src https://assistantapps.com/manifest.json; connect-src api.assistantapps.com; base-uri 'self'; report-uri 'none'; form-action 'none'; frame-ancestors 'none'; upgrade-insecure-requests;" />
+                <add name="Set-Cookie" value="cross-site-cookie=name; SameSite=None; Secure" />
+            </customHeaders>
+        </httpProtocol>
+        <rewrite>
+            <rules>
+                <rule name="React Routes" stopProcessing="true">
+                    <match url=".*" />
+                    <conditions logicalGrouping="MatchAll">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <action type="Rewrite" url="/" />
+                </rule>
+            </rules>
+        </rewrite>
+        <staticContent>
+            <remove fileExtension=".woff" />
+            <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+            <remove fileExtension=".woff2" />
+            <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
+            <remove fileExtension=".licence" />
+            <mimeMap fileExtension=".licence" mimeType="text/plain" />
+            <remove fileExtension=".license" />
+            <mimeMap fileExtension=".license" mimeType="text/plain" />
+        </staticContent>
+    </system.webServer>
 </configuration>
-<!--ProjectGuid: 59503B9E-8BE0-40A4-95F6-5DD436064FC0-->
