--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,22 @@ steps:
 - pwsh:  ./setBuildName.ps1 $(Build.BuildId)
   displayName: 'Set Build Name'
 
-- script: |
-    npm install
+- task: Npm@1
+  inputs:
+    command: 'install'
+    workingDir: 'webpack'
+  displayName: 'npm install for webpack folder'
+
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    workingDir: 'webpack'
+    customCommand: 'run build'
+  displayName: 'Build Seo Files'
+
+- task: Npm@1
+  inputs:
+    command: 'ci'
   displayName: 'npm install'
 
 - task: Npm@1
