--- a/webpack/package.json
+++ b/webpack/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm-run-all --sequential combine-prod data:*",
     "combine-prod": "node ./node/getRequiredData.js prod",
-    "combine-dev": "node ./node/getRequiredData.js prod",
+    "combine-dev": "node ./node/getRequiredData.js",
     "data:generate": "node ./node/generateSeoPages.js",
     "data:generate-other": "node ./node/generateOtherFiles.js"
   },
