--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nms-web-app",
-  "version": "0.3.21",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
@@ -30,7 +30,8 @@
     "react-toastify": "^8.0.3",
     "redux": "^4.1.2",
     "segmented-control": "^0.1.17",
-    "sweetalert2": "^11.1.9"
+    "sweetalert2": "^11.1.9",
+    "sweetalert2-react-content": "^4.2.0"
   },
   "scripts": {
     "start": "env-cmd --file ./.env.development react-scripts start",
