Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,17 @@ steps:
     customCommand: run build-prod
   displayName: 'Build React Files'
 
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: 'build'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/reactDrop.zip'
+    replaceExistingArchive: true
+
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: 'build' 
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/reactDrop.zip' 
     artifactName: 'reactDrop'
+
+
