--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nms-web-app",
-  "version": "0.4.4",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
@@ -12,6 +12,7 @@
     "framer-motion": "^4.1.17",
     "i18next": "^21.3.3",
     "node-sass": "^6.0.1",
+    "object-hash": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
