correct what is new guid

--- a/public/assets/config.staging.json
+++ b/public/assets/config.staging.json
@@ -5,6 +5,6 @@
     "apiUrl": "https://staging-api.nmsassistant.com",
     "assistantAppsUrl": "https://api.assistantapps.com",
     "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
-    "currentWhatIsNewGuid": "a478810a-7f35-454e-9b24-c63ed6c0651da",
+    "currentWhatIsNewGuid": "4f23c969-7870-4b85-bfd4-e294cb5bc522",
     "googleClientId": "539483681905-d4ak563l825o8i0b47inn1c7gu30abvs.apps.googleusercontent.com"
 }
