--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -5,6 +5,6 @@
     "apiUrl": "http://localhost:55555",
     "assistantAppsUrl": "http://localhost:55555",
     "assistantAppsAppGuid": "4f66c40e-07d7-4fba-973c-c514bf1e57c6",
-    "currentWhatIsNewGuid": "a478810a-7f35-454e-9b24-c63ed6c0651da",
+    "currentWhatIsNewGuid": "4f23c969-7870-4b85-bfd4-e294cb5bc522",
     "googleClientId": "539483681905-d4ak563l825o8i0b47inn1c7gu30abvs.apps.googleusercontent.com"
 }
