--- a/public/assets/config.production.json
+++ b/public/assets/config.production.json
@@ -5,6 +5,6 @@
     "apiUrl": "https://api.nmsassistant.com",
     "assistantAppsUrl": "https://api.assistantapps.com",
     "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
-    "currentWhatIsNewGuid": "a478810a-7f35-454e-9b24-c63ed6c0651da",
+    "currentWhatIsNewGuid": "4f23c969-7870-4b85-bfd4-e294cb5bc522",
     "googleClientId": "539483681905-cg6d6d3m29kdepmv73efcehr2dia7cfq.apps.googleusercontent.com"
 }
