--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
-    "@mui/lab": "*",
+    "@mui/lab": "5.0.0-alpha.53",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
