--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nms-web-app",
-  "version": "0.5.20",
+  "version": "0.5.22",
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
@@ -24,6 +24,7 @@
     "react-lazyload": "^3.2.0",
     "react-list": "^0.8.13",
     "react-markdown": "^7.1.0",
+    "react-modal": "^3.14.4",
     "react-modal-sheet": "^1.4.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
@@ -66,6 +67,7 @@
     "@types/react-helmet": "^6.0.0",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-list": "^0.8.5",
+    "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
