--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nms-web-app",
-  "version": "0.5.27",
+  "version": "0.5.28",
   "private": true,
   "dependencies": {
     "@material/react-fab": "^0.15.0",
@@ -31,10 +31,10 @@
     "react-scripts": "^4.0.3",
     "react-tippy": "^1.4.0",
     "react-toastify": "^8.0.3",
+    "react-vertical-timeline-component": "^3.5.2",
     "redux": "^4.1.2",
     "segmented-control": "^0.1.17",
-    "sweetalert2": "^11.1.9",
-    "sweetalert2-react-content": "^4.2.0"
+    "sweetalert2": "^11.1.9"
   },
   "scripts": {
     "start": "env-cmd --file ./.env.development react-scripts start",
@@ -70,6 +70,7 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-vertical-timeline-component": "^3.3.1",
     "@types/redux": "^3.6.0",
     "@types/webpack-env": "^1.15.1",
     "typescript": "^3.7.5"
