--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material/react-fab": "^0.15.0",
     "@mui/lab": "5.0.0-alpha.53",
+    "@steveeeie/react-page-transition": "^1.2.1",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
@@ -27,13 +28,16 @@
     "react-modal": "^3.14.4",
     "react-modal-sheet": "^1.4.1",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "react-tippy": "^1.4.0",
     "react-toastify": "^8.0.3",
+    "react-transition-group": "^4.4.2",
     "react-vertical-timeline-component": "^3.5.2",
     "redux": "^4.1.2",
     "segmented-control": "^0.1.17",
+    "styled-components": "^5.3.3",
     "sweetalert2": "^11.1.9"
   },
   "scripts": {
@@ -69,7 +73,7 @@
     "@types/react-list": "^0.8.5",
     "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-vertical-timeline-component": "^3.3.1",
     "@types/redux": "^3.6.0",
     "@types/webpack-env": "^1.15.1",
