add language flags

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dayjs": "^1.10.7",
     "env-cmd": "^10.1.0",
     "firebase": "^9.2.0",
+    "flag-icons": "^6.0.3",
     "framer-motion": "^4.1.17",
     "i18next": "^21.3.3",
     "node-sass": "^6.0.1",
