--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,12 +20,12 @@ steps:
     workingDir: 'webpack'
   displayName: 'npm install for webpack folder'
 
-- task: Bash@3
+- task: Npm@1
   inputs:
-    targetType: 'inline'
-    script: 'cd ./webpack && npm run build'
+    command: 'custom'
+    workingDir: 'webpack'
+    customCommand: 'run build'
   displayName: 'Build Seo Files'
-
 
 - task: Npm@1
   inputs:
