--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,43 @@
 {
-  "short_name": "AssistantNMS",
-  "name": "Assistant For No Man's Sky",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#7986cb",
-  "background_color": "#ffffff"
+"name": "Assistant for No Man's Sky",
+"short_name": "",
+"description": "Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&amp;#39;s Sky!!",
+"lang": "en-US",
+"manifest_version": 2,
+"version": "0.15.3",
+"background_color": "#1b1f22",
+"theme_color": "",
+"display": "standalone",
+"scope": "/",
+"start_url": "/?standalone",
+"developer": {
+"name": "Kurt Lourens",
+"url": "https://kurtlourens.com"
+},
+"icons": [
+
+{
+"src": "assets/favicon/android-chrome-512x512.png",
+"sizes": "512x512",
+"type": "image/png"
+}
+,
+{
+"src": "assets/favicon/android-chrome-192x192.png",
+"sizes": "192x192",
+"type": "image/png"
+}
+,
+{
+"src": "assets/favicon/mstile-150x150.png",
+"sizes": "150x150",
+"type": "image/png"
+}
+,
+{
+"src": "assets/favicon/favicon-32x32.png",
+"sizes": "32x32",
+"type": "image/png"
+}
+]
 }
