--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
   - task: Npm@1
     inputs:
       command: 'custom'
-      customCommand: 'ci --force'
+      customCommand: 'install --force'
     displayName: 'npm install'
 
   - task: Npm@1
