--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,9 @@
 "description": "Available on the Google Play and Apple App Store. Get Crafting, Refining and Cooking Recipes for the game No Man&amp;#39;s Sky!!",
 "lang": "en-US",
 "manifest_version": 2,
-"version": "0.17.1",
+"version": "0.20.1",
 "background_color": "#1b1f22",
-"theme_color": "",
+"theme_color": "#7986cb",
 "display": "standalone",
 "scope": "/",
 "start_url": "/?standalone",
