--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.20.3",
   "private": true,
   "dependencies": {
-    "@material/react-fab": "^0.15.0",
+    "@leecheuk/react-google-login": "^5.4.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.2",
@@ -16,7 +16,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-ga": "^3.3.0",
-    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-lazy-load-image-component": "^1.5.4",
     "react-list": "^0.8.17",
