--- a/.github/workflows/BuildAndDeploy.yml
+++ b/.github/workflows/BuildAndDeploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build TS
         run: |
           npm ci
-          npm run build
+          npm run build-prod
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.4
