🚧 More Overwolf migration

--- a/public/assets/config.json
+++ b/public/assets/config.json
@@ -2,7 +2,7 @@
     "googleAnalyticsEnabled": false,
     "consoleLogDebug": true,
     "useServiceWorker": false,
-    "useOverwolfRoutes": true,
+    "isRunningInOverwolf": false,
     "apiUrl": "https://api.nmsassistant.com",
     "assistantAppsUrl": "https://api.assistantapps.com",
     "assistantAppsAppGuid": "4f66c40e-07d7-4fba-973c-c514bf1e57c6",
