--- a/public/assets/config.overwolf.json
+++ b/public/assets/config.overwolf.json
@@ -2,7 +2,7 @@
     "googleAnalyticsEnabled": true,
     "consoleLogDebug": false,
     "useServiceWorker": true,
-    "useOverwolfRoutes": true,
+    "isRunningInOverwolf": true,
     "apiUrl": "https://api.nmsassistant.com",
     "assistantAppsUrl": "https://api.assistantapps.com",
     "assistantAppsAppGuid": "589405b4-e40f-4cd9-b793-6bf37944ee09",
