--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-vertical-timeline-component": "^3.3.3",
-    "node-sass": "^7.0.1",
+    "sass": "^1.62.1",
     "typescript": "^4.7.3"
   }
 }
