--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nms-web-app",
-  "version": "0.37.0",
+  "version": "0.38.0",
   "private": true,
   "scripts": {
     "start": "env-cmd --file ./.env.development react-scripts start",
@@ -18,7 +18,7 @@
     "framer-motion": "^6.3.10",
     "i18next": "^21.8.8",
     "object-hash": "^3.0.0",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
@@ -35,6 +35,7 @@
     "react-toastify": "^9.0.3",
     "react-vertical-timeline-component": "^3.5.2",
     "redux": "^4.2.0",
+    "sass": "^1.69.5",
     "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
@@ -47,7 +48,6 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-vertical-timeline-component": "^3.3.3",
-    "node-sass": "^7.0.1",
     "typescript": "^4.7.3"
   },
   "eslintConfig": {
