--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "npx eslint src/**",
     "lint:fix": "npx eslint src/** --fix",
     "prettier": "npx prettier src/**/*.ts src/**/*.tsx --write",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -52,9 +53,12 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-vertical-timeline-component": "^3.3.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "redux": "^4.2.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "typescript-eslint": "^7.16.1"
   },
   "browserslist": {
     "production": [
